# airbyte

airbyte-integrations/connectors/destination-azure-blob-storage-python/: Dockerfile  README.md  build_docker.sh  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/destination-azure-blob-storage-python/destination_azure_blob_storage_python/: __init__.py  azure.py  config.py  config_reader.py  constants.py  destination.py  run.py  spec.json  stream_writer.py
airbyte-integrations/connectors/destination-azure-blob-storage-python/integration_tests/: integration_test.py
airbyte-integrations/connectors/destination-azure-blob-storage-python/sample_files/: configured_catalog.json
docs/integrations/destinations/: azure-blob-storage-python.md
